# ad-proof

./: .gitignore  FINANCIAL_CREDENTIALS.md  README.md
contracts/: CredentialRegistry.sol  FinancialCredentialRegistry.sol
discuss/: vc-refactor-plan.md
server/: .gitlab-ci.yml  Cargo.toml
server/config/: app_config.json  keypair.txt  log4rs.yaml
server/crates/lib/solana_client/: Cargo.toml
server/crates/lib/solana_client/src/: lib.rs
server/crates/lib/zkp/: Cargo.toml
server/crates/lib/zkp/data/: financial_credentials.json
server/crates/lib/zkp/src/: credential.rs  financial_zkp.rs  identity.rs  lib.rs  vc.rs  zkp.rs
server/data/: education_credentials.json  financial_credentials.json
solana/: README.md
solana/credential/: Anchor.toml
solana/credential/programs/credential/: Cargo.toml
solana/credential/programs/credential/src/: lib.rs
solana/credential/tests/: credential.ts
test_api/: README.md  key.py  test_credential_api.py
web/: .env.template  README.md  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: credential.ts  financial.ts  identity.ts  vc.ts
web/src/components/: DebugConsole.vue  RoleSelector.vue  SolanaCredentialManager.vue
web/src/config/: solana.ts
web/src/config/idl/: credential.json
web/src/layout/: index.vue
web/src/layout/components/: Header.vue
web/src/router/: index.ts
web/src/styles/: index.css
web/src/types/: credential.ts  financial.ts  index.d.ts  vc.ts
web/src/utils/: json-storage.ts  request.ts  role.ts  solana-client.ts
web/src/views/credential/: blockchain.vue  get.vue  issue.vue  verify.vue
web/src/views/financial/: index.vue
web/src/views/financial/individual/: list.vue
web/src/views/financial/institution/: issue-credit.vue  issue-cross-border.vue  issue-income.vue
web/src/views/financial/verifier/: verify.vue
web/src/views/home/: index.vue
web/src/views/identity/: index.vue
web/src/views/income/: index.vue
web/src/views/kyc/: index.vue
