[workspace]
members = [
  "crates/bin/gateway",
  "crates/lib/zkp",
  "crates/lib/solana_client",
]
resolver = "2"
[workspace.package]
authors = ["huang <1020099571@qq.com>"]
edition = "2021"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z" # Optimize for size.
panic = 'abort'
# strip = "symbols" # none(false) debuginfo symbols(true).

[workspace.dependencies]
salvo = { version = "0.76.2", features = [
  "serve-static",
  "oapi",
  "logging",
  "catch-panic",
  "websocket",
  "session",
  "cors",
] }
log = "0.4.21"
log4rs = "1.3.0"
once_cell = "1.20.2"
bigdecimal = { version = "0.4.3", features = ["std", "serde"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = {version ="1.11.0", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.5"
rbatis = { version = "4.5.49", features = [] }
futures-util = "0.3.31"
