[package]
name = "solana_client"
version = "0.1.0"
edition = "2021"
description = "Client library for interacting with Solana credential registry"

[dependencies]
solana-sdk = "2.2.1"
solana_client_sdk = { package = "solana-client", version = "2.2.0" }
solana-program = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
anyhow = "1.0"
log = "0.4"
borsh = "1.5.5"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
base64 = "0.22.1"
bs58 = "0.4.0"
sha2 = "0.10.8"
