[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
bellman = { version = "0.14.0", features = ["groth16"] }
bls12_381 = "0.8"
ff = "0.13"
group = "0.13"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
blake3 = "1.3"
once_cell = "1.8"
tracing = "0.1"
log = "0.4"
salvo.workspace = true
chrono = "0.4.39"
log4rs.workspace = true
[dev-dependencies]
env_logger = "0.11"
